Copy tests from indy